argo-applications/apps/webserver1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver1
  namespace: webserver1
  labels:
    app: webserver1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver1
  template:
    metadata:
      labels:
        app: webserver1
      annotations:
        proxy.istio.io/config: |
          proxyMetadata:
              ISTIO_META_DNS_CAPTURE: "true"
              ISTIO_META_DNS_AUTO_ALLOCATE: "true"
    spec:
      containers:
        - name: webserver1
          image: 192.16.0.20:5000/service-a:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
