argo-applications/apps/webserver1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: webserver1
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 80
  selector:
    app: webserver1
